# Demarche-qualite

./: README.md  app.py  packages.txt  pyproject.toml  replit.nix  requirements-streamlit.txt  requirements.txt
.streamlit/: config.toml
assets/: quality_fundamentals.py
attached_assets/: Pasted--histogramme-review-the-math-behind-how-to-build-histogramme-this-could-be-a-good-code-help-gen-1744024742895.txt  Pasted-Curated-Quality-Tools-Collection-of-essential-tools-for-quality-analysis-and-improvement-Interac-1745089113096.txt  Pasted-Product-Requirements-Document-PRD-Quality-Tools-WebApp-1-Introduction-Overview-This-PRD-out-1743167783401.txt
modules/: correlation.py  five_whys.py  flowchart.py  histogram.py  ishikawa.py  learning.py  pareto.py  qqoqccp.py  swot.py
utils/: data.py  export.py  translation.py
