[project]
name = "quality-tools-webapp"
version = "1.0.0"
description = "Quality Tools WebApp for learning and applying quality management tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
]
